k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seo-tool
  labels:
    name: seo-tool
    app.kubernetes.io/name: seo-tool
    app.kubernetes.io/part-of: seo-tool
